@@ -16,9 +16,7 @@
  */
 package org.apache.camel.quarkus.component.aws2.cw.deployment;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
@@ -36,7 +34,7 @@ class Aws2CwProcessor {
 
     public static final String AWS_SDK_APPLICATION_ARCHIVE_MARKERS = "software/amazon/awssdk";
 
-    private static final List<String> INTERCEPTOR_PATHS = Arrays.asList(
+    private static final List<String> INTERCEPTOR_PATHS = List.of(
             "software/amazon/awssdk/global/handlers/execution.interceptors");
 
     private static final DotName EXECUTION_INTERCEPTOR_NAME = DotName.createSimple(ExecutionInterceptor.class.getName());
@@ -54,9 +52,9 @@ class Aws2CwProcessor {
         INTERCEPTOR_PATHS.forEach(path -> resource.produce(new NativeImageResourceBuildItem(path)));
 
         List<String> knownInterceptorImpls = combinedIndexBuildItem.getIndex()
-                .getAllKnownImplementors(EXECUTION_INTERCEPTOR_NAME)
+                .getAllKnownImplementations(EXECUTION_INTERCEPTOR_NAME)
                 .stream()
-                .map(c -> c.name().toString()).collect(Collectors.toList());
+                .map(c -> c.name().toString()).toList();
 
         reflectiveClasses.produce(
                 ReflectiveClassBuildItem.builder(knownInterceptorImpls.toArray(new String[knownInterceptorImpls.size()]))
